syntax = "proto3";

import "Contact.proto";

option java_package="org.olmis.pypepro.proto.module.proto";

message ApiResponse {
	string responseMessage = 1;
	int32 responseCode = 2;
	Contact contact = 3;
}